--- a/backend/package.json
+++ b/backend/package.json
@@ -33,7 +33,9 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.3",
+    "@nestjs/throttler": "^6.4.0",
     "bcrypt": "^6.0.0",
+    "class-sanitizer": "^1.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "mongoose": "^8.20.0",
@@ -42,6 +44,7 @@
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "validator": "^13.15.23",
     "winston": "^3.18.3"
   },
   "devDependencies": {
